# surge

./: .gitignore  README.md  index.html  pyproject.toml
src/surge/: __init__.py  app.py  cli.py  inference.py
src/surge/_vendor/dinov2/hub/: backbones.py
src/surge/_vendor/dinov2/models/: vision_transformer.py
src/surge/models/: __init__.py  surge.py
src/surge/modules/: __init__.py
src/surge/modules/encoders/: __init__.py  base.py  dinov2.py  dinov3.py  timm.py
src/surge/modules/heads/: __init__.py  nad.py
src/surge/utils/: background.py  geometry_numpy.py  geometry_torch.py  io.py  vis.py
static/css/: index.css
tests/: test_pretrained_surge.py
